<resources>
    <string name="Boost_description">Get up to 5x the views, plus likes that get shown sooner!</string>
    <string name="InstantLike_description">Stand out and be shown instantly with Instant Likes. Optionally add a note.</string>
    <string name="PaidLike_description">Show your interest and stand out with a virtual bouquet.</string>
    <string name="ReopenChat_description">Need more time? Reopen an expired chat for 30 days.</string>
    <string name="Take_description">Send likes to people who catch your eye in Discover.</string>
    <string name="Woo_flower_description">Stand out and get seen faster. Send flowers to bump your profile to the top of their queue. Tap the flower icon to get started.</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_delete">Account deletion</string>
    <string name="account_put_on_pause_snackbar_message">Your account was paused. Enjoy your break!</string>
    <string name="active_within_72_hours">Active within 72 hours</string>
    <string name="activity_report_active_header">Active within 72 hr</string>
    <string name="activity_report_chat_header">Chats with matches</string>
    <string name="activity_report_intro">Reports show you who\'s worth your time with activity and chat data.</string>
    <string name="activity_report_message_header">Sends first message</string>
    <string name="activity_report_replies">Replies within</string>
    <string name="activity_reports_12_hr_max">12hr+</string>
    <string name="activity_reports_hour_minutes_timestamp">%1$d hr %2$d min</string>
    <string name="activity_reports_minutes_timestamp">%d min</string>
    <string name="activity_reports_title_mine">My Activity Report</string>
    <string name="activity_reports_update_every_24_hours_for_each_profile">Note: Reports are updated every 24 hours, so check back soon if data is missing.</string>
    <string name="add_my_location">Add my location</string>
    <string name="advanced_preferences_dialog_confirm_text">This may limit the number of Bagels we can find you so you may not receive one every day.</string>
    <string name="advanced_preferences_dialog_confirm_title">Are you sure?</string>
    <string name="advanced_preferences_dialog_ethnicity_title">Your Bagel\'s Ethnicity</string>
    <string name="advanced_preferences_dialog_religion_title">Your Bagel\'s Religion</string>
    <string name="albums">Albums</string>
    <string name="allow_access_to_gallery">Give us access to your Gallery so that you can update your profile photos.</string>
    <string name="already_have_cmb_account">Note: If you’ve signed in with Facebook before, signing in with your number will create a new account.</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_bar_transition">appBar</string>
    <string name="app_displayed_name">Coffee Meets Bagel</string>
    <string name="app_name">Coffee Meets Bagel</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="arent_you_popular">Well, aren\'t you popular!</string>
    <string name="arg_dating">preference</string>
    <string name="arg_interest">interest</string>
    <string name="arg_personality">personality</string>
    <string name="arg_traits">traits</string>
    <string name="arg_value">value</string>
    <string name="attribution_prefix">You matched with %1$s\10thanks to %2$s!</string>
    <string name="auto_scroll_menu_item">AUTO SCROLL: %s</string>
    <string name="average_response_time_to_messages_in_chat">Average time it takes them to reply</string>
    <string name="awesome_cap_first_letter">Awesome</string>
    <string name="bagel_action_connected_male">CONNECTED</string>
    <string name="bagel_action_liked">LIKED</string>
    <string name="bagel_action_passed">PASSED</string>
    <string name="bagel_action_rematched_male">REMATCHED</string>
    <string name="bagel_id">Bagel ID:</string>
    <string name="bagel_preference_disclaimer">By providing your ethnicity and religious preferences, you consent to our use of this information to fine tune your matches. You may withdraw your consent at anytime by deleting this information. Visit our %s to learn more.</string>
    <string name="bagel_sent_a_sticker">%s sent a sticker</string>
    <string name="bagel_sent_an_image">%s sent an image</string>
    <string name="banned_description">Your account is frozen due to community guideline violations. If you think this is a mistake, reach out to our support team and we’ll try to get you back to dating.</string>
    <string name="banned_error_description">Check your connection, then try signing in again. If the issue persists, CMB or its verification partner may be undergoing maintenance. Stay up to date on CMB’s status page.</string>
    <string name="banned_error_title">We’re having trouble connecting</string>
    <string name="banned_in_review_description">If everything checks out, we’ll have you back on the app within 72 hours! Keep an eye on your email – we’ll reach out if we need more information.</string>
    <string name="banned_in_review_title">We’re still verifying your identity</string>
    <string name="banned_rejected_description">We received your verification attempt, but unfortunately your identity couldn’t be confirmed. Think this might be a mistake? Contact our support team so we can get you back to dating.</string>
    <string name="banned_rejected_title">@string/banned_title</string>
    <string name="banned_title">Your account is frozen</string>
    <string name="bean_shop_already_following_instagram">You are already following @coffeemeetsbagel on Instagram. No Beans have been awarded.</string>
    <string name="bean_shop_already_following_twitter">You are already following @coffeeMBagel on Twitter. No Beans have been awarded.</string>
    <string name="bean_shop_already_tweeted">You have already Tweeted about @coffeeMBagel on Twitter. No Beans have been awarded.</string>
    <string name="bean_shop_buy_items_success">Adding items to your account….</string>
    <string name="bean_shop_free_button_image_description">Image for the service that will give free beans</string>
    <string name="bean_shop_header">Buy beans to unlock features. Save up to %s when you buy in bulk!</string>
    <string name="bean_shop_play_missing_body">Only phones signed in to Google Play can see prices and make purchases. Check that you’re signed in, then give it another go.</string>
    <string name="bean_shop_play_missing_cta">Go to Google Play</string>
    <string name="bean_shop_play_missing_header">Are you signed in to Google Play?</string>
    <string name="bean_shop_play_not_found">Google Play not found</string>
    <string name="bean_shop_purchase_consumption_failure">There was a problem adding the Beans to your account. Please go to Settings -&gt; Logout and try again, or contact support.</string>
    <string name="bean_shop_purchase_verification_failure">Cannot verify your purchase. Please go to Settings -&gt; Logout to try again, or Contact Support.</string>
    <string name="bean_shop_section_title_buy_beans">Bean packages</string>
    <string name="bean_shop_skus_missing_body">We’re having some trouble connecting to Google Play. Try again shortly.</string>
    <string name="bean_shop_skus_missing_header">Come back in a bit</string>
    <string name="bean_shop_subscription_base_explanation">Snag just the essentials at a lower price</string>
    <string name="bean_shop_subscription_base_explanation_base_subbed">You’re getting just the essentials with %s</string>
    <string name="buy_more_beans_button_text">Buy beans to send like</string>
    <string name="debug_text">This is a debug build.</string>
    <string name="distance_default">250km</string>
    <string name="eighteen_to_sixty">18–60</string>
    <string name="gender_inference_label">I\'d like to be shown to…</string>
    <string name="gender_inference_label_female">People looking for women</string>
    <string name="gender_inference_label_male">People looking for men</string>
    <string name="gender_inference_sub_label">@string/gender_pref_sub_label</string>
    <string name="gender_inference_why_these">Why these options?</string>
    <string name="got_it">Got it</string>
    <string name="height_range">Height Range</string>
    <string name="height_range_default">5\'11\'\' - 6\'12\'\'</string>
    <string name="help">Help</string>
    <string name="how_recently_they_logged_in">Whether they\'ve recently signed in</string>
    <string name="imperial">Imperial</string>
    <string name="label_degree">Degree</string>
    <string name="last_active_filters">Active within the last 72 hours</string>
    <string name="likes_you_edit_prefs_card_cta">Edit my preferences</string>
    <string name="likes_you_edit_prefs_card_text">Expand your preferences to see more people your type here and in Suggested. Changes apply at noon.</string>
    <string name="likes_you_edit_prefs_card_title">Wishing for more likes your type?</string>
    <string name="metric">Metric</string>
    <string name="my_profile_preference_advanced_ethnicity_label">Ethnicity</string>
    <string name="my_profile_preference_agerange_label">Age Range</string>
    <string name="my_profile_preference_matchradius_label">Distance</string>
    <string name="next">Next</string>
    <string name="not_now">Not now</string>
    <string name="number_of_times_they_chat_over_numbers_of_connections">How often they message matches</string>
    <string name="number_of_times_they_initiate_chat_over_numbers_of_connections">How often they break the ice</string>
    <string name="premium_disclaimer">Recurring billing, cancel anytime. Subscription will auto-renew for same package length at same price until you cancel from the Google Play store. For more info, visit our Subscription Terms &amp; Conditions.</string>
    <string name="subscribe">Subscribe</string>
    <string name="support">Support</string>
    <string name="units">Units</string>
    <string name="what_is_activity_report">What\'s an Activity Report?</string>
</resources>