<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.coffeemeetsbagel.cmb_views.CmbImageView android:id="@+id/onboarding_back_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/baseline_2x" android:src="@drawable/arrow_back" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintTop_toTopOf="0"/>
    <LinearLayout android:orientation="vertical" android:id="@+id/message_container" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_xxxlarge" android:layout_marginStart="@dimen/baseline_4x" android:layout_marginEnd="@dimen/baseline_4x" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toBottomOf="@+id/onboarding_back_button">
        <com.coffeemeetsbagel.cmb_views.CmbTextView android:id="@+id/message" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/gender_inference_label" style="@style/bold_dark_700"/>
        <com.coffeemeetsbagel.cmb_views.CmbTextView android:id="@+id/sub_message" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/baseline_2x" android:text="@string/gender_inference_sub_label" style="@style/medium_gray_400"/>
    </LinearLayout>
    <com.coffeemeetsbagel.cmb_views.CmbRadioGroup android:id="@+id/option_list_container" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacer_2" android:layout_marginStart="@dimen/baseline_4x" android:layout_marginEnd="@dimen/baseline_4x" app:layout_constraintTop_toBottomOf="@+id/message_container" app:maxOptions="1" app:mustSelectOne="true" style="@style/cmb_radio_group">
        <CheckBox android:id="@+id/woman_checkbox" android:text="@string/gender_inference_label_female" style="@style/cmb_radio_group_checkbox"/>
        <CheckBox android:id="@+id/man_checkbox" android:text="@string/gender_inference_label_male" style="@style/cmb_radio_group_checkbox"/>
    </com.coffeemeetsbagel.cmb_views.CmbRadioGroup>
    <com.coffeemeetsbagel.cmb_views.CmbTextView android:id="@+id/see_more_identities" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacer_1" android:text="@string/gender_inference_why_these" android:layout_marginStart="@dimen/baseline_4x" android:layout_marginEnd="@dimen/baseline_4x" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toBottomOf="@+id/option_list_container" style="@style/medium_main_200"/>
    <com.coffeemeetsbagel.cmb_views.CmbButton android:enabled="false" android:layout_gravity="bottom" android:id="@+id/onboarding_next_button" android:layout_width="match_parent" android:layout_height="0dp" android:layout_marginBottom="@dimen/baseline_3x" android:text="@string/next" android:layout_marginStart="@dimen/baseline_4x" android:layout_marginEnd="@dimen/baseline_4x" app:layout_constraintBottom_toBottomOf="0" style="@style/main_button"/>
</androidx.constraintlayout.widget.ConstraintLayout>
