<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:background="@color/transparent" android:padding="24dp" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:background="@drawable/rounded_solid_white_12dp" android:padding="24dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/spacer_2">
                <com.coffeemeetsbagel.cmb_views.CmbTextView android:textSize="24sp" android:textStyle="bold" android:gravity="start" android:id="@+id/what_is_activity_report_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/what_is_activity_report" app:layout_constraintTop_toTopOf="0" style="@style/medium_dark_400"/>
                <com.coffeemeetsbagel.cmb_views.CmbTextView android:id="@+id/intro" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/activity_report_intro" app:layout_constraintTop_toBottomOf="@+id/what_is_activity_report_title"/>
                <ImageView android:id="@+id/icon_chat_with_matches" android:layout_width="48dp" android:layout_height="48dp" android:src="@drawable/ic_chat_with_matches" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="@+id/pie_view_title"/>
                <com.coffeemeetsbagel.cmb_views.CmbTextView android:id="@+id/pie_view_title" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/activity_report_chat_header" android:layout_marginStart="@dimen/spacer_1" app:layout_constraintBottom_toTopOf="@+id/pie_view_description" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/icon_chat_with_matches" app:layout_constraintTop_toBottomOf="@+id/intro" style="@style/medium_dark_300"/>
                <com.coffeemeetsbagel.cmb_views.CmbTextView android:id="@+id/pie_view_description" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/number_of_times_they_chat_over_numbers_of_connections" app:layout_constraintBottom_toTopOf="@+id/message_view_title" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="@+id/pie_view_title" app:layout_constraintTop_toBottomOf="@+id/pie_view_title" style="@style/regular_gray_200"/>
                <ImageView android:id="@+id/icon_send_first_message" android:layout_width="48dp" android:layout_height="48dp" android:src="@drawable/ic_sends_first_message" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="@+id/message_view_title"/>
                <com.coffeemeetsbagel.cmb_views.CmbTextView android:id="@+id/message_view_title" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/activity_report_message_header" android:layout_marginStart="@dimen/spacer_1" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/icon_send_first_message" app:layout_constraintTop_toBottomOf="@+id/pie_view_description" style="@style/medium_dark_300"/>
                <com.coffeemeetsbagel.cmb_views.CmbTextView android:id="@+id/message_view_description" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/number_of_times_they_initiate_chat_over_numbers_of_connections" app:layout_constraintBottom_toTopOf="@+id/on_off_view_title" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="@+id/message_view_title" app:layout_constraintTop_toBottomOf="@+id/message_view_title" style="@style/regular_gray_200"/>
                <ImageView android:id="@+id/icon_activeness" android:layout_width="48dp" android:layout_height="48dp" android:src="@drawable/ic_activeness" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="@+id/on_off_view_title"/>
                <com.coffeemeetsbagel.cmb_views.CmbTextView android:id="@+id/on_off_view_title" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/active_within_72_hours" android:layout_marginStart="@dimen/spacer_1" app:layout_constraintBottom_toTopOf="@+id/on_off_view_description" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/icon_activeness" app:layout_constraintTop_toBottomOf="@+id/message_view_description" style="@style/medium_dark_300"/>
                <com.coffeemeetsbagel.cmb_views.CmbTextView android:id="@+id/on_off_view_description" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/how_recently_they_logged_in" app:layout_constraintBottom_toTopOf="@+id/dotted_circle_view_title" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="@+id/on_off_view_title" app:layout_constraintTop_toBottomOf="@+id/on_off_view_title" style="@style/regular_gray_200"/>
                <ImageView android:id="@+id/icon_replies_within" android:layout_width="48dp" android:layout_height="48dp" android:src="@drawable/ic_replies_within" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="@+id/dotted_circle_view_title"/>
                <com.coffeemeetsbagel.cmb_views.CmbTextView android:id="@+id/dotted_circle_view_title" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/activity_report_replies" android:layout_marginStart="@dimen/spacer_1" app:layout_constraintBottom_toTopOf="@+id/dotted_circle_view_description" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/icon_replies_within" app:layout_constraintTop_toBottomOf="@+id/on_off_view_description" style="@style/medium_dark_300"/>
                <com.coffeemeetsbagel.cmb_views.CmbTextView android:id="@+id/dotted_circle_view_description" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/average_response_time_to_messages_in_chat" app:layout_constraintBottom_toTopOf="@+id/update_frequency" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="@+id/dotted_circle_view_title" app:layout_constraintTop_toBottomOf="@+id/dotted_circle_view_title" style="@style/regular_gray_200"/>
                <com.coffeemeetsbagel.cmb_views.CmbTextView android:id="@+id/update_frequency" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/activity_reports_update_every_24_hours_for_each_profile" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/dotted_circle_view_description" style="@style/regular_gray_200"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
        <com.coffeemeetsbagel.cmb_views.CmbTextView android:gravity="center" android:id="@+id/close" android:background="@drawable/primary_button_background_dls" android:padding="@dimen/spacer_1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/got_it" style="@style/medium_white_400"/>
    </LinearLayout>
</FrameLayout>
