<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:background="@drawable/rounded_border_light_grey_1dp" android:padding="@dimen/baseline_2x" android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:id="@+id/edit_prefs_card_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/likes_you_edit_prefs_card_title" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="@style/bold_dark_400"/>
    <TextView android:id="@+id/edit_prefs_card_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/baseline_1x" android:text="@string/likes_you_edit_prefs_card_text" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/edit_prefs_card_title" style="@style/regular_dark_400"/>
    <TextView android:id="@+id/edit_prefs_card_cta" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:text="@string/likes_you_edit_prefs_card_cta" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/edit_prefs_card_text" style="@style/bold_main_400"/>
</androidx.constraintlayout.widget.ConstraintLayout>
